--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -8,6 +8,7 @@ testbed_vlan = 3000
 storage_vlan = 3001
 storage_mgmt_vlan = 3002
 tenant_network_vlan = 3003
+overcloud_floating_vlan = 3007
 overcloud_external_vlan = 3008
 undercloud_vlan = 3009
 
@@ -64,7 +65,7 @@ neutron_mechanism_drivers = openvswitch,cisco_nexus
 # heat patches for undercloud
 puppet_neutron_ref = refs/changes/81/197181/17
 
-heat_templates_ref_1 = refs/changes/50/226550/2
+heat_templates_ref_1 = refs/changes/23/231623/2
 # https://review.openstack.org/#/c/226550 - Remove nameserver lookup dependency from Cisco ML2 CollectMacConfig.
 
 puppet_elements_ref = refs/changes/72/188772/1
@@ -105,6 +106,9 @@ neutron_private_nic = nic1
 neutron_public_nic = nic2
 hypervisor_neutron_public_nic = nic1
 
+undercloud_local_interface = eth0
+undercloud_fake_gateway_interface = eth1
+
 nfs_for_storage = True
 deploy_with_flavors = True
 deploy_with_flavors_args = --control-flavor control --compute-flavor compute
@@ -143,15 +147,15 @@ hypervisor_neutron_physical_bridge = br-vlan
 ext_net_network = external
 
 
-# You will need the following properties:
+# You can override the following properties
 
-# Example (use the same ip range for external IPs and floating):
-;overcloud_external_ip_cidr = 10.23.228.48/28
-;overcloud_external_ip_start = 10.23.228.52
-;overcloud_external_ip_end = 10.23.228.56
-;overcloud_external_gateway = 10.23.228.49
-;
-# native vlan must be set
+# overcloud external access
+;overcloud_external_ip_cidr = 10.0.20.0/24
+;overcloud_external_ip_start = 10.0.20.2
+;overcloud_external_ip_end = 10.0.20.254
+;overcloud_external_gateway = 10.0.20.1
+
+# native vlan must be set: 3007
 overcloud_floating_ip_cidr = 10.0.21.0/24
 overcloud_floating_ip_start = 10.0.21.2
 overcloud_floating_ip_end = 10.0.21.254
@@ -161,8 +165,12 @@ overcloud_floating_ip_network_gateway = 10.0.21.1
 # this props are not longer used?
 # TODO: remove them
 compute_bridge_nic = nic1
-controller_external_nic = nic1
 controller_internal_nic = nic1
+controller_external_nic = nic2
+controller_floating_nic = nic3
+
+# run all networking tests
+run_long_tempest = false
 
 #example step, used for printing vars
 [example]
