--- a/osp7_installer/ansible/roles/add-test-gateway-ip/tasks/main.yml
+++ b/osp7_installer/ansible/roles/add-test-gateway-ip/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 
 - name: hack in ip for tests
-  shell: ip addr | grep -q {{ overcloud_floating_ip_network_gateway }}/24 || ip a add {{ overcloud_floating_ip_network_gateway }}/24 dev br-ctlplane
+  shell: ip addr | grep -q {{ overcloud_floating_ip_network_gateway }}/24 || ip a add {{ overcloud_floating_ip_network_gateway }}/24 dev {{ undercloud_fake_gateway_interface }}
   when: hack_in_undercloud_gateway_ip
