--- a/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
@@ -121,8 +121,9 @@ resources:
                   -
                     ip_netmask: {get_param: TenantIpSubnet}
             -
-              type: ovs_bridge
-              name: {get_input: bridge_name}
+              type: interface
+              # TODO: stop using jinja template here, pass in from heat
+              name: {{ neutron_public_nic }}
               use_dhcp: false
               addresses:
                 -
@@ -131,11 +132,16 @@ resources:
                 -
                   ip_netmask: 0.0.0.0/0
                   next_hop: {get_param: ExternalInterfaceDefaultRoute}
+
+            -
+              type: ovs_bridge
+              name: {get_input: bridge_name}
+              use_dhcp: false
               members:
                 -
                   type: interface
                   # TODO: stop using jinja template here, pass in from heat
-                  name: {{ neutron_public_nic }}
+                  name: {{ controller_floating_nic }}
                   # force the MAC address of the bridge to this interface
                   primary: true
 
