--- a/osp7_installer/ansible/roles/osp-test-data/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-test-data/tasks/main.yml
@@ -82,6 +82,16 @@
         --disk-format=qcow2 < /home/stack/cirros-0.3.4-x86_64-disk.img
   when: cirros_image_downloaded|success
 
+- name: Set Security Group Rules
+  sudo_user: stack
+  shell: >
+         source /home/stack/overcloudrc &&
+         neutron --os-tenant-name test-project --os-username test-user --os-password password security-group-show default |
+         grep icmp ||
+         (neutron --os-tenant-name test-project --os-username test-user --os-password password security-group-rule-create --protocol icmp --direction ingress default &&
+         neutron --os-tenant-name test-project --os-username test-user --os-password password security-group-rule-create --protocol icmp --direction egress default &&
+         neutron --os-tenant-name test-project --os-username test-user --os-password password security-group-rule-create --protocol tcp --port-range-min 22 --port-range-max 22 --direction ingress default)
+
 - name: Create Test VM
   sudo_user: stack
   shell: >
