Stealing some jenkins reporting from the 'vxlan2' branch
keeping them in a separate role to avoid merge conficts

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -165,6 +165,8 @@ overcloud_floating_ip_network_gateway = 10.0.21.1
 # run all networking tests
 run_long_tempest = false
 
+local_report_dir=../../target/
+
 #example step, used for printing vars
 [example]
 
