--- a/osp7_installer/ansible/roles/rh-tempest/tasks/main.yml
+++ b/osp7_installer/ansible/roles/rh-tempest/tasks/main.yml
@@ -30,6 +30,8 @@
         auth.allow_tenant_isolation True
         auth.tempest_roles _member_
         network.ipv6 false
+        compute.build_timeout 500
+        compute.ssh_timeout 500
         network.ipv6_subnet_attributes false
         compute-feature-enabled.live_migration false
         identity.admin_username admin
@@ -55,7 +57,8 @@
         cd /usr/share/openstack-tempest-kilo &&
         cp /etc/redhat-certification-openstack/tempest.conf /usr/share/openstack-tempest-kilo/etc/tempest.conf &&
         sleep 60 &&
-        testr run --parallel --concurrency 1 network
+        ./run_tempest.sh -N --config /etc/redhat-certification-openstack/tempest.conf --serial network
+#        testr run --parallel --concurrency 1 network
 #        ./run_tempest.sh -N
 #        --config /etc/redhat-certification-openstack/tempest.conf
 #        --serial
