ignoring subunit/junit conversion error

--- a/osp7_installer/ansible/roles/report_status/tasks/main.yml
+++ b/osp7_installer/ansible/roles/report_status/tasks/main.yml
@@ -58,7 +58,7 @@
   shell: testr last --subunit | subunit-1to2 | subunit2junitxml --output-to=tempest_results.xml
   args:
     chdir: /usr/share/openstack-tempest-kilo/
-#  ignore_errors: yes
+  ignore_errors: yes
 
 - name: Upload test report
   fetch:
