adding report_status to 'deploy' and 'redeploy' actions

--- a/osp7_installer/ansible/osp-director.yml
+++ b/osp7_installer/ansible/osp-director.yml
@@ -12,6 +12,7 @@
     - add-test-gateway-ip
     - read-overcloudrc-props
     - rh-tempest
+    - report_status
 
 #- hosts: overcloud_controller
 #  remote_user: root
