--- a/osp7_installer/ansible/overcloud-redeploy.yml
+++ b/osp7_installer/ansible/overcloud-redeploy.yml
@@ -9,6 +9,7 @@
     - add-test-gateway-ip
     - read-overcloudrc-props
     - rh-tempest
+    - report_status
 
 #- hosts: overcloud_controller
 #  remote_user: root
