--- a/osp7_installer/conf_common/bxb.conf
+++ b/osp7_installer/conf_common/bxb.conf
@@ -6,6 +6,8 @@ proxy = http://%(proxy_host)s:%(proxy_port)s
 overcloud_vlan = 1202
 deploy_with_flavors=true
 
+controller_separate_public_nic = False
+
 [cobbler]
 cobbler_api_url = http://10.86.7.58/cobbler_api
 cobbler_username = cobbler
