--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -105,6 +105,7 @@ network_nexus_vlan_range = datacentre:3010:3250
 neutron_private_nic = nic1
 neutron_public_nic = nic2
 hypervisor_neutron_public_nic = nic1
+controller_separate_public_nic = True
 
 undercloud_local_interface = eth0
 undercloud_fake_gateway_interface = eth1
@@ -161,6 +162,11 @@ overcloud_floating_ip_start = 10.0.21.2
 overcloud_floating_ip_end = 10.0.21.254
 overcloud_floating_ip_network_gateway = 10.0.21.1
 
+# IP to use for undercloud_fake_gateway_interface.
+# set these if you want undercloud_fake_gateway_interface to get a different IP
+# than overcloud_floating_ip_network_gateway
+undercloud_fake_gw_ip =
+undercloud_fake_gw_ip_prefix =
 
 # this props are not longer used?
 # TODO: remove them
@@ -171,6 +177,10 @@ controller_floating_nic = nic3
 
 # run all networking tests
 run_long_tempest = false
+
+rhel_username = dummy_user
+rhel_password = dummy_pass
+rhel_pool = dummy_pool
 
 #example step, used for printing vars
 [example]
