Add support to disable lab pxe interface
to avoid conflicts with the lab cobbler

--- a/osp7_installer/ansible/osp-director.yml
+++ b/osp7_installer/ansible/osp-director.yml
@@ -2,6 +2,7 @@
 - hosts: "{{ director_node_ssh_ip }}"
   connection: ssh
   roles:
+    - disable-lab-pxe
     - etc-hosts
     - osp-director
     - nfs-shares
