--- a/osp7_installer/ansible/roles/osp-director/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-director/tasks/main.yml
@@ -61,8 +61,11 @@
 # INFO: 2015-12-03 13:30:31,512 -- ############### End stdout/stderr logging ###############
 # ERROR: 2015-12-03 13:30:31,513 --     Hook FAILED.
 # ERROR: 2015-12-03 13:30:31,513 -- Failed running command ['dib-run-parts', u'/tmp/tmpvQ4HhO/pre-install.d']
-- name: Restart system daemons & iptables
-  shell: 'systemctl daemon-reload && systemctl restart iptables'
+# may have to also 'systemctl restart iptables'
+# as a last resort if hitting this error, manually reboot the undercloud controller and deploy with
+# '-p cobbler.skip=true'
+- name: Restart system daemons
+  shell: systemctl daemon-reload
 
 #- name: stack user sudo defaults
 #  lineinfile: line="Defaults:nova !requiretty" dest="/etc/sudoers.d/stack" create=yes
