--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -101,13 +101,14 @@ network_nexus_host_key_checks = false
 
 network_nexus_vlan_range = datacentre:3010:3250
 
-# which NICs to use on the overcloud
-neutron_private_nic = nic1
-neutron_public_nic = nic2
-hypervisor_neutron_public_nic = nic1
-
-controller_separate_public_nic = True
-controller_floating_nic = nic3
+# NIC options -- these are REQUIRED per-testbed
+# NOTE: controller_tenant_nic and controller_external_nic can be the same nic ID.
+#       - in this case the same bridge will be used for both tenant and external API, & floating traffic
+controller_provisioning_nic = nic0
+controller_tenant_nic = nic1
+controller_external_nic = nic2
+compute_provisioning_nic = nic0
+compute_tenant_nic = nic1
 
 undercloud_local_interface = eth0
 undercloud_fake_gateway_interface = eth1
@@ -144,9 +145,14 @@ network_isolation = true
 
 # multi NIC:
 neutron_flat_networks = datacentre,external
-neutron_bridge_mappings = datacentre:br-vlan,external:br-ex
+# this is for separate tenant and external nics
+#neutron_bridge_mappings = datacentre:br-vlan,external:br-ex
+# this if for same tenant and external nics
+# neutron_bridge_mappings = datacentre:br-ex
+neutron_external_bridge = br-ex
+neutron_tenant_bridge = br-ex
 overcloud_external_net_bridge = ''
-hypervisor_neutron_physical_bridge = br-vlan
+;hypervisor_neutron_physical_bridge = br-vlan
 ext_net_network = external
 
 
@@ -169,13 +175,6 @@ overcloud_floating_ip_network_gateway = 10.0.21.1
 # than overcloud_floating_ip_network_gateway
 undercloud_fake_gw_ip =
 undercloud_fake_gw_ip_prefix =
-
-# this props are not longer used?
-# TODO: remove them
-compute_bridge_nic = nic1
-controller_internal_nic = nic1
-controller_external_nic = nic2
-controller_floating_nic = nic3
 
 # run all networking tests
 run_long_tempest = false
