Added tenantVLAN back since computeValidate was failing in heat-deploy.
Also, replaced separate external_bridge param

--- a/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
@@ -114,6 +114,12 @@ resources:
                   addresses:
                   -
                     ip_netmask: {get_param: StorageMgmtIpSubnet}
+                -
+                  type: vlan
+                  vlan_id: {get_param: TenantNetworkVlanID}
+                  addresses:
+                  -
+                    ip_netmask: {get_param: TenantIpSubnet}
 
             -
               type: ovs_bridge
