Updated to make external IP on controller.yaml VLAN under br-ex - floating IP still on native VLAN - added option to switch that for 'external' provider VLAN scenario

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -152,6 +152,7 @@ neutron_flat_networks = datacentre,external
 neutron_external_bridge = br-ex
 neutron_tenant_bridge = br-ex
 
+create_ext_net_vlan_provider = False
 
 # You can override the following properties
 
