--- a/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-overcloud/tasks/main.yml
@@ -108,7 +108,7 @@
 
 # Create external network
 
-- name: Create ext-net
+- name: Create ext-net (flat)
   sudo_user: stack
   shell: >
         source /home/stack/overcloudrc &&
@@ -118,6 +118,20 @@
         --router:external=True
         --provider:physical_network {{ 'datacentre' if neutron_external_bridge == neutron_tenant_bridge else 'external' }}
         --provider:network_type flat
+  when: not create_ext_net_vlan_provider
+
+- name: Create ext-net on vlan provider
+  sudo_user: stack
+  shell: >
+        source /home/stack/overcloudrc &&
+        neutron net-list |
+        grep -q ext-net ||
+        neutron net-create ext-net
+        --router:external=True
+        --provider:physical_network {{ 'datacentre' if neutron_external_bridge == neutron_tenant_bridge else 'external' }}
+        --provider:network_type vlan
+        --provider:segmentation_id {{ neutron_external_vlan }}
+  when: create_ext_net_vlan_provider
 
 - name: Create ext-subnet
   sudo_user: stack
