--- a/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
+++ b/osp7_installer/ansible/roles/osp-overcloud/templates/controller.yaml
@@ -132,14 +132,16 @@ resources:
                   name: {{ controller_external_nic }}
                   # force the MAC address of the bridge to this interface
                   primary: true
-
-              addresses:
                 -
-                  ip_netmask: {get_param: ExternalIpSubnet}
-              routes:
-                -
-                  ip_netmask: 0.0.0.0/0
-                  next_hop: {get_param: ExternalInterfaceDefaultRoute}
+                  type: vlan
+                  vlan_id: {get_param: ExternalNetworkVlanID}
+                  addresses:
+                  -
+                    ip_netmask: {get_param: ExternalIpSubnet}
+                  routes:
+                  -
+                    ip_netmask: 0.0.0.0/0
+                    next_hop: {get_param: ExternalInterfaceDefaultRoute}
             {% if controller_tenant_nic %}
 
             -
