added patched RPM repo to ensure first 7.2 build works

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -17,6 +17,7 @@ yum_timeout = 120
 yum_repos = [{ 'name': 'rhel-7-server-openstack-7.0-director-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/RH7-RHOS-7.0-director.repo' },
              { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/RH7-RHOS-7.0.repo' },
              { 'name': 'rhel-7-server-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
+            { 'name': 'post.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post.repo' },
 ;             { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-optional-rpms.repo' },
 ;             { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-extras-rpms.repo' }
             ]
@@ -153,7 +154,7 @@ network_isolation = true
 # multi NIC:
 neutron_flat_networks = datacentre,external
 # this is for separate tenant and external nics
-#neutron_bridge_mappings = datacentre:br-vlan,external:br-ex
+#neutron_bridge_mappings = datacentre:br-tenant,external:br-ex
 # this if for same tenant and external nics
 # neutron_bridge_mappings = datacentre:br-ex
 neutron_external_bridge = br-ex
