Update to use next 7.2 build

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -14,23 +14,23 @@ undercloud_vlan = 3009
 
 yum_timeout = 120
 
-yum_repos = [{ 'name': 'rhel-7-server-openstack-7.0-director-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/RH7-RHOS-7.0-director.repo' },
-             { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/RH7-RHOS-7.0.repo' },
+yum_repos = [{ 'name': 'rhel-7-server-openstack-7.0-director-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.11.2/RH7-RHOS-7.0-director.repo' },
+             { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.11.2/RH7-RHOS-7.0.repo' },
              { 'name': 'rhel-7-server-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
-            { 'name': 'post.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post.repo' },
+;            { 'name': 'post.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post.repo' },
 ;             { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-optional-rpms.repo' },
 ;             { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-extras-rpms.repo' }
             ]
 
 cert_yum_repos = [
 ;                 { 'name': 'rhel-7-server-cert-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-cert-rpms.repo' },
-                 { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/RH7-RHOS-7.0.repo' },
+                 { 'name': 'rhel-7-server-openstack-7.0-rpms.repo', 'url':  'http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.11.2/RH7-RHOS-7.0.repo' },
                  { 'name': 'rhel-7-server-rpms.repo', 'url': 'http://memory.cisco.com/osp7/rpms/rh/RHEL7.2/rhel-7-server-rpms.repo' },
 ;                  { 'name': 'rhel-7-server-optional-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-optional-rpms.repo' },
 ;                  { 'name': 'rhel-7-server-extras-rpms.repo', 'url': 'http://memory.cisco.com/osp7/ftp-mirror/rhel-7-server-extras-rpms.repo' }
                  ]
 
-image_base_url = http://memory.cisco.com/osp7/rh-images/y2/7.2-2015.12.4.1/
+image_base_url = http://memory.cisco.com/osp7/rh-images/y2/7.2-2015-12-11.2/
 disk_images = [{ 'url': '%(image_base_url)s/deploy-ramdisk-ironic.tar', 'name': 'deploy-ramdisk-ironic.tar' },
               { 'url': '%(image_base_url)s/discovery-ramdisk.tar', 'name': 'discovery-ramdisk.tar' },
               { 'url': '%(image_base_url)s/overcloud-full.tar', 'name': 'overcloud-full.tar' }]
@@ -68,13 +68,14 @@ neutron_mechanism_drivers = openvswitch,cisco_nexus
 ;heat_templates_ref_1 = refs/changes/23/231623/2
 
 
-rpms_for_image = "http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/openstack-cinder-2015.1.2-5.el7ost.noarch.rpm
-                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/openstack-cinder-doc-2015.1.2-5.el7ost.noarch.rpm
-                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/python-cinder-2015.1.2-5.el7ost.noarch.rpm
-                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/python-django-horizon-2015.1.2-4.el7ost.noarch.rpm
-                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/python-django-horizon-doc-2015.1.2-4.el7ost.noarch.rpm
-                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/openstack-dashboard-2015.1.2-4.el7ost.noarch.rpm
-                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/openstack-dashboard-theme-2015.1.2-4.el7ost.noarch.rpm"
+rpms_for_image = ""
+;                 "http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/openstack-cinder-2015.1.2-5.el7ost.noarch.rpm
+;                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/openstack-cinder-doc-2015.1.2-5.el7ost.noarch.rpm
+;                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/python-cinder-2015.1.2-5.el7ost.noarch.rpm
+;                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/python-django-horizon-2015.1.2-4.el7ost.noarch.rpm
+;                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/python-django-horizon-doc-2015.1.2-4.el7ost.noarch.rpm
+;                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/openstack-dashboard-2015.1.2-4.el7ost.noarch.rpm
+;                  http://memory.cisco.com/osp7/rpms/rh/OSP7.2-2015.12.4.1/post/openstack-dashboard-theme-2015.1.2-4.el7ost.noarch.rpm"
 ;rpms_for_image = "http://memory.cisco.com/osp7/rpms/python-networking-cisco-2015.1.0-5.el7ost.noarch.rpm"
 
 patch_infos = [ {'name': 'neutron',
