--- a/osp7_installer/ansible/roles/osp-prep-for-overcloud/tasks/main.yml
+++ b/osp7_installer/ansible/roles/osp-prep-for-overcloud/tasks/main.yml
@@ -165,10 +165,7 @@
   shell: >
         source /home/stack/stackrc &&
         openstack flavor create --id auto --ram 4096 --disk 40 --vcpus 1 compute &&
-        openstack flavor set
-        --property "cpu_arch"="x86_64"
-        --property "capabilities:boot_option"="local"
-        --property "capabilities:profile"="compute" compute
+        openstack flavor set --property "cpu_arch"="x86_64" --property "capabilities:boot_option"="local" --property "capabilities:profile"="compute" compute
   when: flavor_compute_check|failed
 
 
