setting default tempest_dir property

--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -190,7 +190,8 @@ rhel_username = dummy_user
 rhel_password = dummy_pass
 rhel_pool = dummy_pool
 
-local_report_dir=../../target/
+tempest_dir = /home/stack/cisco-tempest
+local_report_dir = ../../target/
 
 #example step, used for printing vars
 [example]
