Add ha tenant net orphan killer to test action.

--- a/osp7_installer/ansible/test-cloud.yml
+++ b/osp7_installer/ansible/test-cloud.yml
@@ -2,6 +2,7 @@
 - hosts: "{{ director_node_ssh_ip }}"
   connection: ssh
   roles:
+      - ha-tenant-orphan-assassin
 #    - add-test-gateway-ip
 #    - osp-test-data
 
