--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -193,6 +193,8 @@ rhel_pool = dummy_pool
 tempest_dir = /home/stack/cisco-tempest
 local_report_dir = ../../target/
 
+#ha_tenant_kill_orphans = True
+
 #example step, used for printing vars
 [example]
 
